mod list screen cleanup